--- a/src/simulation/beagle_rviz/package.xml
+++ b/src/simulation/beagle_rviz/package.xml
@@ -1,18 +1,18 @@
 <?xml version="1.0"?>
 <package format="2">
-  <name>robot_gazebo</name>
+  <name>beagle_rviz</name>
   <version>0.0.0</version>
-  <description>The robot_gazebo package</description>
+  <description>Link between rviz and robot data</description>
+
   <maintainer email="cle.bourdonnaye@gmail.com">Clément de La Bourdonnaye</maintainer>
   <license>TODO</license>
 
   <!-- Dependencies -->
   <buildtool_depend>catkin</buildtool_depend>
+  <depend>roscpp</depend>
 
-  <!-- Gazebo -->
-  <build_depend>gazebo_ros</build_depend>
-  <build_export_depend>gazebo_ros</build_export_depend>
-  <exec_depend>gazebo_ros</exec_depend>
+  <!-- Messages -->
+  <depend>visualization_msgs</depend>
 
   <export></export>
 </package>
