--- a/src/simulation/description/package.xml
+++ b/src/simulation/description/package.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0"?>
 <package format="2">
-  <name>robot_description</name>
+  <name>description</name>
   <version>0.0.0</version>
-  <description>URDF robot description package</description>
+  <description>Robot and environment description package</description>
 
   <maintainer email="cle.bourdonnaye@gmail.com">Clément de La Bourdonnaye</maintainer>
   <license>TODO</license>
