--- a/src/simulation/beagle_gazebo/package.xml
+++ b/src/simulation/beagle_gazebo/package.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0"?>
 <package format="2">
-  <name>robot_gazebo</name>
+  <name>beagle_gazebo</name>
   <version>0.0.0</version>
-  <description>The robot_gazebo package</description>
+  <description>The beagle_gazebo package</description>
   <maintainer email="cle.bourdonnaye@gmail.com">Clément de La Bourdonnaye</maintainer>
   <license>TODO</license>
 
