--- a/src/interface/can_interface/package.xml
+++ b/src/interface/can_interface/package.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0"?>
 <package format="2">
-  <name>robot_interface</name>
+  <name>can_interface</name>
   <version>2018.1.0</version>
-  <description>The robot_interface package</description>
+  <description>The can_interface package</description>
 
   <!-- One maintainer tag required, multiple allowed, one person per tag -->
   <!-- Example:  -->
@@ -36,6 +36,7 @@
   <depend>robot_watcher</depend>
   <exec_depend>message_runtime</exec_depend>
   <depend>node_watcher</depend>
+  <depend>interface_msgs</depend>
 
 
   <!-- The export tag contains other, unspecified, tags -->
