--- a/src/ai/action_manager/package.xml
+++ b/src/ai/action_manager/package.xml
@@ -18,8 +18,7 @@
 
   <!-- Messages -->
   <depend>ai_msgs</depend>
-  <depend>procedures_msgs</depend>
-  <depend>can_msgs</depend>
+  <depend>interface_msgs</depend>
 
   <export></export>
 </package>
