--- a/src/interface/interface_msgs/package.xml
+++ b/src/interface/interface_msgs/package.xml
@@ -1,13 +1,11 @@
 <?xml version="1.0"?>
 <package format="2">
-  <name>procedures_msgs</name>
+  <name>interface_msgs</name>
   <version>2018.1.0</version>
-  <description>The procedures_msgs package</description>
+  <description>The interface_msgs package</description>
 
-  <maintainer email="alx.care@gmail.com">Alexis CARE</maintainer>
   <maintainer email="cle.bourdonnaye@gmail.com">Clément de La Bourdonnaye</maintainer>
   <license>TODO</license>
-  <author email="alx.care@gmail.com">Alexis CARE</author>
 
   <!-- Default requirements for *_msgs packages -->
   <buildtool_depend>catkin</buildtool_depend>
@@ -17,7 +15,6 @@
 
   <!-- Other msgs dependencies-->
   <depend>std_msgs</depend>
-  <depend>actionlib_msgs</depend>
 
   <export></export>
 </package>
