--- a/src/procedures/reach/package.xml
+++ b/src/procedures/reach/package.xml
@@ -13,7 +13,7 @@
   <depend>roscpp</depend>
 
   <!-- Message dependencies -->
-  <depend>can_msgs</depend>
+  <depend>interface_msgs</depend>
 
   <!-- Packages -->
   <depend>action_manager</depend>
