--- a/src/simple_test/package.xml
+++ b/src/simple_test/package.xml
@@ -12,11 +12,10 @@
   <depend>roscpp</depend>
 
   <!-- Packages -->
-  <depend>robot_interface</depend>
   <depend>node_watcher</depend>
 
   <!-- Messages -->
-  <depend>can_msgs</depend>
+  <depend>interface_msgs</depend>
   <depend>ai_msgs</depend>
 
   <export></export>
