--- a/src/ai/controller/requirements.txt
+++ b/src/ai/controller/requirements.txt
@@ -1,6 +1,3 @@
-/board/STM optional
-/board/ARDUINO optional
-/board/ZIGBEE optional
-/board/PANEL optional
-/ros_can/interface required
+/interface/arduino required
+/interface/stm required
 /ai/scheduler required
