Fixed collateral damages and fixed launch files
Also remove GPIO emulator GUI, as new simulation should provide everything
needed for that.

--- a/src/ai/node_watcher/CMakeLists.txt
+++ b/src/ai/node_watcher/CMakeLists.txt
@@ -9,15 +9,19 @@ find_package(catkin REQUIRED COMPONENTS
   # ROS c++ dependencies
   roscpp
   roslib
+  rospy
 
   # Required messages
   ai_msgs
 )
 
+# Enable python
+catkin_python_setup()
+
 catkin_package(
   INCLUDE_DIRS include
   LIBRARIES ${PROJECT_NAME}
-  CATKIN_DEPENDS roscpp roslib ai_msgs
+  CATKIN_DEPENDS rospy roscpp roslib ai_msgs
 #  DEPENDS system_lib
 )
 
