--- a/src/simulation/beagle_gazebo/package.xml
+++ b/src/simulation/beagle_gazebo/package.xml
@@ -18,6 +18,7 @@
   <!-- Messages -->
   <depend>std_msgs</depend>
   <depend>ai_msgs</depend>
+  <depend>interface_msgs</depend>
 
   <export>
     <gazebo_ros plugin_path="${prefix}/lib" gazebo_media_path="${prefix}" />
