--- a/param/server_param.yaml
+++ b/param/server_param.yaml
@@ -1,19 +1,10 @@
-simulation: true
 ros_can:
   socketcan_bridge:
-    can_device: "vcan0"
+    can_device: "can0"
 
 ai:
-  robot_watcher:
-    INIT_TIMEOUT: 15 #sec
-    GAME_LENTH: 95 #sec
-
-  scheduler:
-    config_file: "" #set in scheduler launch file
-
   controller:
       robot_pos:
         x: 210
         y: 210
         angle: 1571 #mrad green side
-      procedures: [Move]
