--- a/src/ai/node_watcher/package.xml
+++ b/src/ai/node_watcher/package.xml
@@ -12,6 +12,9 @@
   <!-- Dependencies -->
   <buildtool_depend>catkin</buildtool_depend>
   <depend>roscpp</depend>
+  <depend>rospy</depend>
+
+  <!-- Other packages -->
   <depend>roslib</depend>
 
   <!-- Messages -->
