--- a/src/ai/controller/CMakeLists.txt
+++ b/src/ai/controller/CMakeLists.txt
@@ -12,7 +12,6 @@ find_package(catkin REQUIRED COMPONENTS
   # Required messages
   std_msgs
   interface_msgs
-  procedures_msgs
   ai_msgs
 
   # Other packages
@@ -23,7 +22,7 @@ find_package(catkin REQUIRED COMPONENTS
 catkin_package(
   INCLUDE_DIRS include
   LIBRARIES ${PROJECT_NAME}
-  CATKIN_DEPENDS interface_msgs ai_msgs procedures_msgs std_msgs actionlib node_watcher
+  CATKIN_DEPENDS interface_msgs ai_msgs std_msgs actionlib node_watcher
 #  DEPENDS system_lib
 )
 
