--- a/src/ai/vision/package.xml
+++ b/src/ai/vision/package.xml
@@ -1,23 +1,23 @@
 <?xml version="1.0"?>
 <package format="2">
-  <name>input_simulation</name>
-  <version>0.0.0</version>
-  <description>The input_simulation package</description>
+  <name>vision</name>
+  <version>2018.1.0</version>
+  <description>The vision package</description>
 
   <maintainer email="cle.bourdonnaye@gmail.com">Clément de La Bourdonnaye</maintainer>
   <license>TODO</license>
 
   <!-- Dependencies -->
   <buildtool_depend>catkin</buildtool_depend>
-  <depend>rospy</depend>
+  <depend>roscpp</depend>
 
   <!-- Packages -->
   <depend>node_watcher</depend>
+  <depend>ai_description</depend>
 
   <!-- Messages -->
-  <depend>interface_msgs</depend>
   <depend>ai_msgs</depend>
-  <depend>can_msgs</depend>
+  <depend>interface_msgs</depend>
 
   <export></export>
 </package>
