--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
-[submodule "src/src/lib/pugixml"]
-	path = src/src/lib/pugixml
+[submodule "src/lib/pugixml"]
+	path = src/lib/pugixml
 	url = https://github.com/joselusl/pugixml
