--- a/src/ai/vision/package.xml
+++ b/src/ai/vision/package.xml
@@ -14,6 +14,8 @@
   <!-- Packages -->
   <depend>node_watcher</depend>
   <depend>ai_description</depend>
+  <depend>pugixml</depend>
+  <depend>action_manager</depend>
 
   <!-- Messages -->
   <depend>ai_msgs</depend>
