--- a/src/ai/action_manager/package.xml
+++ b/src/ai/action_manager/package.xml
@@ -11,6 +11,7 @@
   <!-- Dependencies -->
   <buildtool_depend>catkin</buildtool_depend>
   <depend>roscpp</depend>
+  <depend>rospy</depend>
 
   <!-- Packages -->
   <depend>actionlib</depend>
