new python action definition
fixed issue with start signal being sent before controller listening
removed ai_msgs/OrientedPoint and interface_msgs/Point for geometry_msgs/Pose2D and interface_msgs/DirectedPose

--- a/src/ai/action_manager/CMakeLists.txt
+++ b/src/ai/action_manager/CMakeLists.txt
@@ -48,3 +48,13 @@ add_library(${PROJECT_NAME}
 
 # Add cmake target dependencies of the library
 add_dependencies(${PROJECT_NAME} ${${PROJECT_NAME}_EXPORTED_TARGETS} ${catkin_EXPORTED_TARGETS})
+
+# Testing
+if(CATKIN_ENABLE_TESTING)
+  find_package(rostest REQUIRED)
+  
+  foreach(T
+      test/test_action.py)
+     add_rostest(${T})
+  endforeach()
+endif()
