--- a/src/ai/action_manager/package.xml
+++ b/src/ai/action_manager/package.xml
@@ -21,5 +21,8 @@
   <depend>ai_msgs</depend>
   <depend>interface_msgs</depend>
 
+  <!-- Tests -->
+  <test_depend>rostest</test_depend>
+  
   <export></export>
 </package>
