--- a/src/ai/ai_msgs/package.xml
+++ b/src/ai/ai_msgs/package.xml
@@ -18,6 +18,7 @@
   <!-- Other msgs dependencies-->
   <depend>std_msgs</depend>
   <depend>actionlib_msgs</depend>
+  <depend>geometry_msgs</depend>
 
   <export></export>
 </package>
