--- a/src/interface/interface_msgs/package.xml
+++ b/src/interface/interface_msgs/package.xml
@@ -15,6 +15,6 @@
 
   <!-- Other msgs dependencies-->
   <depend>std_msgs</depend>
-
+  <depend>geometry_msgs</depend>
   <export></export>
 </package>
