unit test launchers

--- a/src/lib/xml_class_parser/CMakeLists.txt
+++ b/src/lib/xml_class_parser/CMakeLists.txt
@@ -21,7 +21,7 @@ if(CATKIN_ENABLE_TESTING)
   find_package(rostest REQUIRED)
   
   foreach(T
-      test/test_parsable.py)
+      test/test-parsable.launch)
      add_rostest(${T})
   endforeach()
 endif()
