--- a/src/interface/interface_msgs/CMakeLists.txt
+++ b/src/interface/interface_msgs/CMakeLists.txt
@@ -5,12 +5,14 @@ find_package(catkin REQUIRED COMPONENTS
   # Messages and services base dependencies
   message_generation
   std_msgs
+  ai_msgs
   geometry_msgs
 )
 
 # Generic messages (uses both in input and output)
 add_message_files(DIRECTORY msg
   FILES
+  CanData.msg
   DirectedPose.msg
   Speed.msg
   WheelsDistance.msg
@@ -37,7 +39,7 @@ add_message_files(DIRECTORY output
 )
 
 # Generate added messages and services with any dependencies listed here
-generate_messages(DEPENDENCIES std_msgs geometry_msgs)
+generate_messages(DEPENDENCIES std_msgs geometry_msgs ai_msgs)
 
 # Declare dependencies for external packages
-catkin_package(CATKIN_DEPENDS message_runtime std_msgs)
+catkin_package(CATKIN_DEPENDS message_runtime std_msgs ai_msgs)
