unit tests for can_interface

--- a/src/ai/scheduler/CMakeLists.txt
+++ b/src/ai/scheduler/CMakeLists.txt
@@ -11,8 +11,7 @@ find_package(catkin REQUIRED COMPONENTS
 
   # Required messages
   ai_msgs
-  can_msgs
-
+  
   # Other packages
   action_manager
 )
@@ -20,7 +19,7 @@ find_package(catkin REQUIRED COMPONENTS
 catkin_package(
   INCLUDE_DIRS include
 #  LIBRARIES ${PROJECT_NAME}
-  CATKIN_DEPENDS roscpp can_msgs ai_msgs action_manager
+  CATKIN_DEPENDS roscpp ai_msgs action_manager
 #  DEPENDS system_lib
 )
 
