--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,9 +1,1 @@
-cmake_minimum_required(VERSION 2.8.3)
-
-if (UNIX)
-    include(/opt/ros/melodic/share/catkin/cmake/toplevel.cmake)
-endif (UNIX)
-
-if (MSVC)
-    include(C:\\opt\\ros\\melodic\\x64\\share\\catkin\\cmake\\toplevel.cmake)
-endif (MSVC)
+/opt/ros/melodic/share/catkin/cmake/toplevel.cmake
