--- a/src/ai/scheduler/package.xml
+++ b/src/ai/scheduler/package.xml
@@ -11,7 +11,7 @@
 
   <!-- Dependencies -->
   <buildtool_depend>catkin</buildtool_depend>
-  <depend>roscpp</depend>
+  <depend>rospy</depend>
 
   <!-- Packages -->
   <depend>action_manager</depend>
@@ -20,7 +20,7 @@
   <depend>ai_msgs</depend>
   
   <!-- Testing -->
-  <test_depend>std_msgs</test_depend>
+  <test_depend>rostest</test_depend>
 
   <export></export>
 </package>
