--- a/src/interface/can_interface/package.xml
+++ b/src/interface/can_interface/package.xml
@@ -16,7 +16,8 @@
   <!-- Other packages-->
   <depend>node_watcher</depend>
   <depend>interface_description</depend>
-
+  <depend>args_lib</depend>
+  
   <!-- Message dependencies-->
   <depend>std_msgs</depend>
   <depend>interface_msgs</depend>
