--- a/src/ai/vision/package.xml
+++ b/src/ai/vision/package.xml
@@ -19,6 +19,7 @@
   <!-- Messages -->
   <depend>ai_msgs</depend>
   <depend>interface_msgs</depend>
+  <depend>args_lib</depend>
 
   <export></export>
 </package>
