--- a/src/interface/interface_description/CMakeLists.txt
+++ b/src/interface/interface_description/CMakeLists.txt
@@ -1,22 +1,9 @@
 cmake_minimum_required(VERSION 2.8.3)
 project(interface_description)
 
-find_package(catkin REQUIRED COMPONENTS
-  # Messages and services base dependencies
-  message_generation
-  std_msgs
-)
-
-# Constants
-add_message_files(DIRECTORY const
-  FILES
-  InterfaceTopics.msg
-)
-
-# Generate added messages and services with any dependencies listed here
-generate_messages(DEPENDENCIES std_msgs)
+find_package(catkin REQUIRED COMPONENTS)
 
 # Declare dependencies for external packages
-catkin_package(CATKIN_DEPENDS message_runtime std_msgs)
+catkin_package(CATKIN_DEPENDS)
 
 include_directories()
