--- a/src/lib/args_lib/CMakeLists.txt
+++ b/src/lib/args_lib/CMakeLists.txt
@@ -1,5 +1,5 @@
 cmake_minimum_required(VERSION 2.8.3)
-project(action_manager)
+project(args_lib)
 
 ## Compile as C++11, supported in ROS Kinetic and newer
 add_compile_options(-std=c++11)
@@ -10,22 +10,26 @@ find_package(catkin REQUIRED COMPONENTS
   roscpp
   rospy
 
-  # Messages packages
-  ai_msgs
-  interface_msgs
-
-  # Other packages
-  args_lib
-  actionlib
-  node_watcher
+  # Messages base dependencies
+  message_generation
+  std_msgs
 )
 
 catkin_python_setup()
 
+# Messages
+add_message_files(DIRECTORY msg
+  FILES
+  Argument.msg
+)
+
+# Generate added messages and services with any dependencies listed here
+generate_messages(DEPENDENCIES std_msgs)
+
 catkin_package(
   INCLUDE_DIRS include
   LIBRARIES ${PROJECT_NAME}
-  CATKIN_DEPENDS roscpp rospy ai_msgs interface_msgs actionlib node_watcher args_lib
+  CATKIN_DEPENDS roscpp rospy message_runtime std_msgs
 #  DEPENDS system_lib
 )
 
@@ -39,11 +43,7 @@ include_directories(
 
 ## Declare a C++ library
 add_library(${PROJECT_NAME}
-  src/Action.cpp
-  src/AtomicAction.cpp
-  src/ActionBlock.cpp
-  src/ActionPerformer.cpp
-  src/PerformClient.cpp
+  src/Argumentable.cpp
 )
 
 # Add cmake target dependencies of the library
@@ -52,10 +52,9 @@ add_dependencies(${PROJECT_NAME} ${${PROJECT_NAME}_EXPORTED_TARGETS} ${catkin_EX
 # Testing
 if(CATKIN_ENABLE_TESTING)
   find_package(rostest REQUIRED)
-  
-  foreach(T
-      test/test-actions.launch
-      test/test-parsing.launch)
-     add_rostest(${T})
+
+  foreach(T #insert unit test here
+    )
+    add_rostest(${T})
   endforeach()
 endif()
