unit tests for c++ action performers

--- a/src/ai/action_manager/CMakeLists.txt
+++ b/src/ai/action_manager/CMakeLists.txt
@@ -52,9 +52,25 @@ add_dependencies(${PROJECT_NAME} ${${PROJECT_NAME}_EXPORTED_TARGETS} ${catkin_EX
 # Testing
 if(CATKIN_ENABLE_TESTING)
   find_package(rostest REQUIRED)
-  
+
+  # C++ test performers nodes
   foreach(T
-      test/test-actions.launch
+    test_fail_performer
+    test_move_performer
+    test_sleep_performer
+  )
+    add_executable(${T} test/actions_performers/${T}.cpp)
+    add_dependencies(${T} ${${PROJECT_NAME}_EXPORTED_TARGETS} ${catkin_EXPORTED_TARGETS})
+    target_link_libraries(${T}
+      ${catkin_LIBRARIES}
+      ${PROJECT_NAME}
+    )
+  endforeach()
+
+  # Tests to perform
+  foreach(T
+      test/test-actions-cpp.launch
+      test/test-actions-py.launch
       test/test-parsing.launch)
      add_rostest(${T})
   endforeach()
