--- a/src/actions/drop/CMakeLists.txt
+++ b/src/actions/drop/CMakeLists.txt
@@ -20,8 +20,8 @@ find_package(catkin REQUIRED COMPONENTS
 catkin_python_setup()
 
 catkin_package(
-  INCLUDE_DIRS include
-  LIBRARIES ${PROJECT_NAME}
+#  INCLUDE_DIRS include
+#  LIBRARIES ${PROJECT_NAME}
   CATKIN_DEPENDS rospy ai_msgs args_lib action_manager
 #  DEPENDS system_lib
 )
